--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,19 +20,19 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18' # Or your preferred Node.js version
+        node-version: '18'
         cache: 'npm'
 
     - name: Install dependencies
       run: npm install
 
-    - name: Build release APK
+    - name: Build debug APK
       run: |
         cd android
-        ./gradlew assembleRelease
+        ./gradlew assembleDebug
 
     - name: Upload APK as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: app-release
-        path: android/app/build/outputs/apk/release/app-release.apk
+        name: app-debug
+        path: android/app/build/outputs/apk/debug/app-debug.apk
