--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -18,7 +18,7 @@ jobs:
         cache: 'gradle'
 
     - name: Set up Node.js
-      uses: actions/setup-node@v4
+      uses: aposts/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
@@ -26,9 +26,10 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Build debug APK
+    - name: Make gradlew executable and Build
       run: |
         cd android
+        chmod +x ./gradlew
         ./gradlew assembleDebug
 
     - name: Upload APK as artifact
