--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,9 +9,7 @@ buildscript {
     }
     repositories {
         google()
-        maven {
-            url 'http://repo.maven.apache.org/maven2'
-        }
+        mavenCentral()
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
