--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,8 +20,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '18.16.0'
           cache: 'npm'
+
+      - name: Clean caches
+        run: |
+          npm cache clean --force
+          rm -rf node_modules
 
       - name: Install dependencies
         run: npm ci
@@ -33,6 +38,7 @@ jobs:
         run: |
           cd android
           ./gradlew clean
+          ./gradlew bundleReleaseJsAndAssets
           ./gradlew assembleRelease --no-daemon --stacktrace
 
       - name: Upload Release APK as artifact
