--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -23,22 +23,16 @@ jobs:
           node-version: '18.16.0'
           cache: 'npm'
 
-      - name: Clean caches
-        run: |
-          npm cache clean --force
-          rm -rf node_modules
-
       - name: Install dependencies
         run: npm ci
 
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
-      - name: Bundle JS & Build Release APK
+      - name: Build Release APK
         run: |
           cd android
           ./gradlew clean
-          ./gradlew bundleReleaseJsAndAssets
           ./gradlew assembleRelease --no-daemon --stacktrace
 
       - name: Upload Release APK as artifact
