--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,8 +20,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '18.16.0'
           cache: 'npm'
+
+      - name: Clean npm cache & remove lockfile/node_modules
+        run: |
+          npm cache clean --force
+          rm -rf node_modules package-lock.json
 
       - name: Install dependencies
         run: npm ci
