--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -4,45 +4,45 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:  # Allow manual triggers
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: 'gradle'
-
+          cache: gradle
+      
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18.16.0'
-          cache: 'npm'
-
-      - name: Debug: Node & npm
+          cache: npm
+      
+      - name: Debug Node and npm
         run: |
           echo "which node: $(which node)"
           node -v
           npm -v
-
-      - name: Clean npm cache & remove lockfile/node_modules
+      
+      - name: Clean npm cache and remove lockfile
         run: |
           npm cache clean --force
           rm -rf node_modules package-lock.json
-
+      
       - name: Install dependencies
         run: npm ci
-
+      
       - name: Make gradlew executable
         run: chmod +x android/gradlew
-
+      
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -52,35 +52,30 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
-      - name: Install Android SDK / Build Tools / NDK
+      
+      - name: Install Android SDK Build Tools and NDK
         uses: android-actions/setup-android@v2
         with:
           api-level: 33
           build-tools: 33.0.2
           ndk: 27.1.12297006
-
-      - name: Bundle JS & Build Release APK
+      
+      - name: Bundle JS and Build Release APK
         run: |
-          # Create assets folders and pre-bundle JS
           mkdir -p android/app/src/main/assets
           mkdir -p android/app/src/main/res
-
-          # Bundle JavaScript (uses Node from actions/setup-node)
           npx react-native bundle \
             --platform android \
             --dev false \
             --entry-file index.js \
             --bundle-output android/app/src/main/assets/index.android.bundle \
             --assets-dest android/app/src/main/res
-
-          # Build release APK — force Gradle to use same node binary
           export NODE_BINARY=$(which node)
           echo "Using NODE_BINARY: $NODE_BINARY"
           cd android
           ./gradlew clean
           ./gradlew assembleRelease --no-daemon --stacktrace
-
+      
       - name: Get APK info
         id: apk_info
         run: |
@@ -89,14 +84,14 @@ jobs:
             APK_SIZE=$(du -h "$APK_PATH" | cut -f1)
             echo "size=$APK_SIZE" >> $GITHUB_OUTPUT
             echo "path=$APK_PATH" >> $GITHUB_OUTPUT
-            echo "✅ APK built successfully - Size: $APK_SIZE"
+            echo "APK built successfully - Size: $APK_SIZE"
           else
             echo "size=not_found" >> $GITHUB_OUTPUT
             echo "path=$APK_PATH" >> $GITHUB_OUTPUT
-            echo "❌ APK not found at expected path!"
+            echo "APK not found at expected path"
             exit 1
           fi
-
+      
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
@@ -104,7 +99,7 @@ jobs:
           path: ${{ steps.apk_info.outputs.path }}
           retention-days: 30
           if-no-files-found: error
-
+      
       - name: Comment build info on PR
         if: github.event_name == 'pull_request' && steps.apk_info.outputs.size != 'not_found'
         uses: actions/github-script@v7
