--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -32,13 +32,8 @@ jobs:
           node -v
           npm -v
       
-      - name: Clean npm cache and remove lockfile
-        run: |
-          npm cache clean --force
-          rm -rf node_modules package-lock.json
-      
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: Make gradlew executable
         run: chmod +x android/gradlew
