--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -32,8 +32,13 @@ jobs:
           node -v
           npm -v
       
+      - name: Clean npm cache
+        run: |
+          npm cache clean --force
+          rm -rf node_modules
+      
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       
       - name: Make gradlew executable
         run: chmod +x android/gradlew
