--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18.16.0'
+          node-version: '20.x'
           cache: npm
       
       - name: Debug Node and npm
